# grandmaster-mining

./: CMakeLists.txt  README.md
src/: main.cpp
